add emacs files and nerdtree

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
-*
+/*
+#meta
 !.gitignore
+
+#vim
 !.vim/
 !.vimrc
+
+#zsh
 !.zshrc
+
+#bash
 !.bash_profile
-!.emacs.d/
+
+#emacs
+!/.emacs.d/
 
 
